--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a href="#">
           <img
             class="ai-img float-end mid-pic"
-            src="/resources/img/ai.gif"
+            src="/resources/img/ai2.gif"
             alt="Responsive image"
           />
           </a>
