--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link rel="stylesheet" type="text/css" href="resources/css/style1.css" />
+    <link rel="stylesheet" type="text/css" href="resources/css/queries.css" />
     <title>Document</title>
   </head>
   <body>
@@ -104,7 +105,7 @@
             <h4>
               <a href="#">Callaway</a>
               <span>  
-                <small class = 'icon-mid'>
+                <small class = 'icon-mid'id='icon-callaway-1'>
                     2018
                 </small>
                 <small class = 'icon-mid' id='icon-callaway-2'>
@@ -138,7 +139,7 @@
               <a href="#">
               <h4 class=""><a href="#">Openglass</a>
                 <span>  
-                    <small class = 'icon-mid'>
+                    <small class = 'icon-mid' id='icon-openglass-1'>
                         2019
                     </small>
                     <small class = 'icon-mid' id='icon-openglass-2'>
@@ -207,12 +208,12 @@
               <div class="navi-text mid-grid">
                 <div class="mid-text">
                 <h4>
-                  <a href="#">You cool with my new phone?</a>
+                  <a href="#" id='coolphone-text'>You cool with my new phone?</a>
                   <span>  
-                    <small class = 'icon-mid'>
+                    <small class = 'icon-mid coolphone' id='icon-coolphone-2'>
                         2020
                     </small>
-                    <small class = 'icon-mid' id='icon-callaway-2'>
+                    <small class = 'icon-mid coolphone' id='icon-callaway-2'>
                         Creative Coding
                     </small>
                   </span>
@@ -237,10 +238,10 @@
                   <div class = "mid-text">
                   <h4 class=""><a href="#">Epsilon</a>
                     <span>  
-                        <small class = 'icon-mid'>
+                        <small class = 'icon-mid' id='icon-epsilon-1'>
                             2018
                         </small>
-                        <small class = 'icon-mid' id='icon-openglass-2'>
+                        <small class = 'icon-mid' id='icon-epsilon-2'>
                             Installation
                         </small>
 
@@ -267,14 +268,14 @@
 
 <div class="row content">
   <div class="col">
-     1 of 3             
+     <!-- 1 of 3              -->
   </div>
   <div class="col-4">
       <a href="#">
     <div class = "title" id='vulcan-title'>
       <h4>Vulcan</h4>
       <span>  
-          <small class = 'icon-row-five'>
+          <small class = 'icon-row-five' id='vulcan1'>
               2017
           </small>
           <small class = 'icon-row-five' id='vulcan-tag'>
@@ -291,7 +292,7 @@
     <div class = "title">
       <h4>Curtis</h4>
       <span>  
-          <small class = 'icon-row-five'>
+          <small class = 'icon-row-five' id='curtis1'>
               2018
           </small>
           <small class = 'icon-row-five' id='curtis-tag'>
@@ -309,7 +310,7 @@
 
 <div class="row content">
     <div class="col">
-       1 of 3             
+       <!-- 1 of 3              -->
     </div>
     <div class="col-4">
         <div class="mid-pic" id='vulcan-pic'>
