--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
           <div class="col hi">
             <p>
               Hi,<br />
-              I’m Billy
+              Lorem
             </p>
           </div>
           <div class="col intro">
             <p class="intro-text">
-              I am a creative technologist and interdisciplinary designer, with
-              recent works focused on various cultural shifts under the
-              influences of machine learning and cybernetics.
+               dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
             </p>
           </div>
         </div>
@@ -52,35 +50,42 @@
         <div class="col works work-text">
           <h4>Works</h4>
         </div>
-      </div>
+      </div> <!--main-nav-->
 
       <div class="row content">
-        <div class="col-2"></div>
+        <div class="col-2">
+          1o3
+        </div>
+
         <div class="col-3 ai-text">
-        <a href="">
-        <div>
-            <a href="#">
-                    <h3>
-            What do they think,<br />
-            when they think about thinking.
-          </h3>
-        </div>
-        
-            <div class= 'icon' id='aiicon1'>
-                <small>Installation</small>
-            </div>
-            <div class= 'icon' id='aiicon2'>
-                <small>Creative Coding</small>
-            </div>
-            <div class= 'icon' id='aiicon3'>
-                <small>AI</small>
-            </div>
-            <div class= 'icon' id='aiicon4'>
-                <small>2020</small>
-            </div>
+          <a href="#">
+            <h3>
+              What do they think,<br />
+              when they think about thinking.
+            </h3>
           </a>
-        </div>
-      </a>
+
+          <p class= 'buzzline'>
+              Sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+
+          <div class = 'tags'>
+              <div class= 'icon' id='aiicon1'>
+                  <small>AI</small>
+              </div>
+              <div class= 'icon' id='aiicon1'>
+                <small>Installation</small>
+              </div>
+              <div class= 'icon' id='aiicon1'>
+                <small>Creative Coding</small>
+              </div>
+              <div class= 'icon' id='aiicon1'>
+                <small>2020</small>
+              </div>
+
+          </div>
+        </div>  <!--col-3 ai-text--> 
+
         <div class="col-7 ai-container">
         <a href="#">
           <img
@@ -189,6 +194,9 @@
                     <h3>
                             <a href="#">Upstream</a>
                     </h3>
+                    <p class='buzzline' id='buzzline-upstream'>
+                      dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+                                </p>
                     <div class= 'icon-upstream'>
                         <small>2020</small>
                     </div>
